# Projeto01_Computacao_Paralela

./: .gitignore  BENCHMARK_SCRIPTS.txt  CMakeLists.txt  QUICK_START.txt  README.md  TESTES.txt  compile_hybrid.txt  compile_openmp.txt  example_output.csv  main.cc  main_hybrid.cc  run_benchmarks.sh  run_quick_test.sh  timer.hpp
